// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic test suite > clicks the button on the client side 1`] = `
<x-button>
    <template shadowrootmode="open">
        <span>
            <code>
                __vite_ssr_import_meta__.env.SSR
            </code>
            : false
        </span>
        <span>
            <code>
                typeof window
            </code>
            : object
        </span>
        <span>
            Was I clicked?: true
        </span>
        <button class="pretty">
            I am a button!
        </button>
    </template>
</x-button>
`;

exports[`basic test suite > renders a button on the client side 1`] = `
<x-button>
    <template shadowrootmode="open">
        <span>
            <code>
                __vite_ssr_import_meta__.env.SSR
            </code>
            : false
        </span>
        <span>
            <code>
                typeof window
            </code>
            : object
        </span>
        <span>
            Was I clicked?: false
        </span>
        <button class="pretty">
            I am a button!
        </button>
    </template>
</x-button>
`;
